[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Healthbar.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholders/Interface_blocagem.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 221, 1265, 955, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 221, 1151, 955, 64 )

[node name="Healthbar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource( 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 955.0
margin_bottom = 64.0
mouse_filter = 2
value = 75.0
texture_under = SubResource( 1 )
texture_progress = SubResource( 1 )
tint_under = Color( 0.258824, 0.192157, 0.192157, 1 )
tint_progress = Color( 0.756863, 0.596078, 0.596078, 1 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 960.0
margin_bottom = 64.0
mouse_filter = 2
value = 50.0
texture_over = SubResource( 2 )
texture_progress = SubResource( 1 )
tint_over = Color( 0.941176, 0.721569, 0.721569, 0.392157 )
tint_progress = Color( 0.776471, 0.0235294, 0.0235294, 1 )

[node name="UpdateTween" type="Tween" parent="."]

[node name="DownpdateTween" type="Tween" parent="."]
